--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [
     "mulif19"
   ],
-  "author": "",
+  "author": "multami mulula",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
